# cosmii

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
.cursor/: settings.json
.cursor/commands/: commit.md  create-pr.md
backend/: .env.example  package.json  pyproject.toml  requirements.txt  seed_cosmos_lessons.py  seed_demo_lessons.py  seed_divine_comedy_lessons.py  seed_hamlet_lessons.py  seed_sapiens_lessons.py  supabase_schema.sql
backend/app/: config.py  db.py  main.py
backend/app/api/: admin.py  chat.py  learning.py  schemas.py
backend/app/ingestion/: embedder.py  parser.py  smart_chunker.py
backend/app/lesson/: generator.py
backend/app/memory/: rag.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json
frontend/public/cosmii/: dancing.webm  giggling.webm  standing.webm  talking.webm
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
frontend/src/components/: book-detail-panel.tsx  book-detail.tsx  book-graph-3d.tsx  book-node.tsx  book-notes.tsx  book-sidebar.tsx  book-upload.tsx  brain-canvas-3d.tsx  brain-canvas.tsx  brain-view.tsx  chat-input.tsx  chat-message.tsx  chat-view.tsx  companion-demo-panel.tsx  concept-dialogue.tsx  cosmic-bg.tsx  cosmii-constellation.tsx  floating-cosmii.tsx  free-question.tsx  gear-constellation.tsx  goal-toast.tsx  graph-view.tsx  home-view.tsx  hud-overlay.tsx  language-sync.tsx  lesson-constellation.tsx  main-content.tsx  quiz-view.tsx  (+8 more)
(+28 files in other folders)
