[project]
name = "book-mind"
version = "0.1.0"
description = "AI agent that behaves like a human who has actually read books"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "litellm>=1.55",
    "chromadb>=0.6",
    "networkx>=3.4",
    "pymupdf>=1.25",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "rank-bm25>=0.2.2",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.2",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
